ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogapp-ingress
  namespace: blogapp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  tls:
  - hosts:
    - bloggapp.duckdns.org
    secretName: blogapp-tls-secret 
  rules:
  - host: bloggapp.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blogapp-frontend
            port:
              number: 80
